--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI='mongodb+srv://tmdqh:shkshk1234@cluster0.ap1gbsg.mongodb.net/?retryWrites=true&w=majority'
 MODE = 'dev'
+JWT_SECRET = secret
+
