--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGODB_URI='mongodb+srv://tmdqh:shkshk1234@cluster0.ap1gbsg.mongodb.net/?retryWrites=true&w=majority'
 MODE = 'dev'
 JWT_SECRET = secret
-
+SWAGGER_USER = novus
+SWAGGER_PASSWORD = 123
